--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
   </head>
 
   <body>
+    <div class="calculator">
+      <div class="display">0</div>
+
+      <div class="button">
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="operator">/</button>
+
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operator">*</button>
+
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operator">-</button>
+
+        <button class="number">0</button>
+        <button class="number">.</button>
+        <button class="equal">=</button>
+        <button class="operator">+</button>
+
+        <button class="clear">Clear</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
