--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
       <div class="display">0</div>
 
       <div class="button">
+        <button class="clear">Clear</button>
+        <button class="backspace">⬅</button>
+        <button class="operator">+</button>
+
         <button class="number">7</button>
         <button class="number">8</button>
         <button class="number">9</button>
-        <button class="operator">/</button>
+        <button class="operator">-</button>
 
         <button class="number">4</button>
         <button class="number">5</button>
@@ -31,14 +35,11 @@
         <button class="number">1</button>
         <button class="number">2</button>
         <button class="number">3</button>
-        <button class="operator">-</button>
+        <button class="operator">/</button>
 
         <button class="number">0</button>
         <button class="number">.</button>
         <button class="equal">=</button>
-        <button class="operator">+</button>
-
-        <button class="clear">Clear</button>
       </div>
     </div>
     <script src="script.js"></script>
